fix spacing

--- a/src/components/floorplan/Floorplan.css
+++ b/src/components/floorplan/Floorplan.css
@@ -214,7 +214,7 @@ p {
   position: absolute;
   height: 50px;
   width: 360px;
-  margin-left: 600px;
+  margin-left: 580px;
   margin-top: 10px;
 }
 
